[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
hyper = "1.3.1"
hyper-util = { version = "0.1.3", features = ["tokio"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
serde = "1.0.200"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
