[package]
name = "proxy2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
hudsucker = { version = "0.19.1", features = ["full"] }
hyper = "0.14.25"
hyper-rustls = "0.23.2"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.21", features = ["log"] }
tracing-subscriber = "0.3.16"
